--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-pypdf
+# Dependencias para dividir PDFs y subir a Google Drive con OAuth de usuario
+pypdf>=4,<5
+google-api-python-client>=2,<3
+google-auth>=2,<3
+google-auth-oauthlib>=1,<2
