--- a/.github/workflows/pdf_splitter.yml
+++ b/.github/workflows/pdf_splitter.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install deps
+      - name: Install deps from requirements.txt
         run: |
           python -m pip install --upgrade pip
-          pip install google-api-python-client google-auth google-auth-oauthlib pypdf
+          pip install -r requirements.txt
 
       - name: Run splitter
         env:
